--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/yewbdar/Word-Guess-Cli#readme",
   "dependencies": {
     "inquirer": "^5.2.0",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "uglify-js": "^3.3.20"
   }
 }
